--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 emacs = "0.18"
+tokio = { version = "1.29.1", features = ["full"] }
+reqwest = { version = "0.11.18", features = ["json", "blocking"] }
+serde = { version = "1.0.174", features = ["derive"] }
+serde_json = "1.0.103"
+dotenv = "0.15.0"
 
 [dev-dependencies]
 emacs-rs-module = "0.18.0"
